# mt_code

./: .gitlab-ci.yml  README.md  connect_in_tmux.sh  run_ansible.sh  setup_revPi.sh
IO/datamodel/: datamodel.idl
IO/src/: CMakeLists.txt  main.c
PiConnectData/connect/: patch_eeprom
PiConnectData/demo/: Makefile
Simulator/: CMakeLists.txt  README.md
Simulator/Scenarios/: baliseNotLinked.json  baliseNotWhereExpected.json  reachEndOfMA.json  scenario1.json  scenario2.json
Simulator/datamodel/: CMakeLists.txt  datamodel.idl
Simulator/src/: CMakeLists.txt  main.c  scenario.c  scenario.h  simulator.c  simulator.h
ansible/: deployOnSPS.yml  setupRevpi.yml  setup_osplNetwork.yml  shutdown.yml
helloWorld/: Makefile
helloWorld/src/: CheckStatus.h  publisher.c  subscriber.c
helloWorld/standalone/: HelloWorld.h  HelloWorld.idl  HelloWorldDcps.h  HelloWorldSacDcps.c  HelloWorldSacDcps.h  HelloWorldSplDcps.c  HelloWorldSplDcps.h  Makefile  Makefile.hw_publisher  Makefile.hw_subscriber  Makefile.hw_types  publisher  subscriber
new_revpi/src/: CMakeLists.txt  DDSEntitiesCreator.c  DDSEntitiesManager.c  DecisionTopic.c  StateTopic.c  main.c
new_revpi/src/datamodel/: datamodel.idl
new_revpi/src/dds_lib/: CMakeLists.txt  DecisionTopic.c  StateTopic.c  TaskTopic.c
new_revpi/src/dds_lib/include/: CheckStatus.h  DecisionTopic.h  TaskTopic.h
new_revpi/src/include/: DDSEntitiesCreator.h  DDSEntitiesManager.h  StateTopic.h  TaskTopic.h
replica/: CMakeLists.txt  README.md
replica/DDSCreator/: CMakeLists.txt  DDSEntitiesCreator.c  DDSEntitiesCreator.h
replica/DIO/: CMakeLists.txt  DIO.c  DIO.h
replica/consensus/: CMakeLists.txt  DDSConsensusManager.c  DDSConsensusManager.h  decisionMaking.c  decisionMaking.h  leaderElection.c  leaderElection.h  replica.c  replica.h  spare.c  spare.h
replica/datamodel/: datamodel.idl
replica/evaluation/: CMakeLists.txt  evaluator.c  evaluator.h
replica/leaderElection/: CMakeLists.txt  DDSConsensusManager.c  DDSConsensusManager.h  leaderElection.c  replica.c
replica/src/: CMakeLists.txt  DDSConsensusManager.c  DDSConsensusManager.h  DDSEntitiesCreator.c  DDSEntitiesCreator.h  DDSEntitiesManager.c  DDSEntitiesManager.h  DIO.c  backgroundTasks.c  backgroundTasks.h  leaderElection.c  main.c  replica.c  replica.h  role.h
replica/state/: CMakeLists.txt  DDSStateManager.c  DDSStateManager.h  balise.c  balise.h  movementAuthority.c  movementAuthority.h  train.c  train.h
revpi/: CMakeLists.txt  deployOnSPS.sh  deployOnSPS.yml
revpi/src/: CMakeLists.txt  main.c
revpi/src/datamodel/: CMakeLists.txt  datamodel.idl  listener_task_data.idl
revpi/src/dds_lib/: CMakeLists.txt  CheckStatus.c  DDSEntitiesCreator.c  DDS_entities_manager.c  DecisionTopic.c  StateTopic.c  actor_topic.c  decision_topic.c  domain_participant.c  listener.c  publisher.c  setup.c  state_topic.c  subscriber.c  task_data_listener.c  task_data_publisher.c  task_data_subscriber.c  task_topic.c  topic.c
revpi/src/dds_lib/include/: DDS_entities_manager.h  DecisionTopic.h  ListenerData.h  actor.h  actor_topic.h  dds_lib.h  decision_topic.h  domain_participant.h  listener.h  publisher.h  state_topic.h  subscriber.h  task_data.h  task_data_listener.h  task_topic.h  topic.h
revpi/src/revpi_worker/: CMakeLists.txt  main.c  worker.c
revpi/src/revpi_worker/include/: DIO.h  worker.h
tests/: .test.py.swp  README.md  test.py
tests/scenario/: .__init__.py.swp  .init.py.swp  __init__.py  baliseNotLinked.py  baliseNotWhereExpected.py  reachEndOfMA.py  scenario.py
